# raspberry-pico-LiquidCrystal-I2C

./: CMakeLists.txt  README.md
inc/: LiquidCrystal_I2C.h
src/: LiquidCrystal_I2C.c  main.c
